debug.log
(0.000) 
            SELECT name, type FROM sqlite_master
            WHERE type in ('table', 'view') AND NOT name='sqlite_sequence'
            ORDER BY name; args=None; alias=default
(0.000) SELECT "django_migrations"."id", "django_migrations"."app", "django_migrations"."name", "django_migrations"."applied" FROM "django_migrations"; args=(); alias=default
"POST /distortions/ HTTP/1.1" 200 44
"POST /distortions/ HTTP/1.1" 200 44
"POST /distortions/ HTTP/1.1" 200 44
"POST /distortions/ HTTP/1.1" 200 44
"POST /distortions/ HTTP/1.1" 200 44
"POST /distortions/ HTTP/1.1" 200 44
"POST /distortions/ HTTP/1.1" 200 44
"POST /distortions/ HTTP/1.1" 200 44
"POST /distortions/ HTTP/1.1" 200 44
"POST /distortions/ HTTP/1.1" 200 44
"POST /distortions/ HTTP/1.1" 200 44
"POST /distortions/ HTTP/1.1" 200 44
Internal Server Error: /distortions/
Traceback (most recent call last):
  File "/home/joshpuglielli/anaconda3/lib/python3.9/site-packages/django/core/handlers/exception.py", line 56, in inner
    response = get_response(request)
  File "/home/joshpuglielli/anaconda3/lib/python3.9/site-packages/django/core/handlers/base.py", line 197, in _get_response
    response = wrapped_callback(request, *callback_args, **callback_kwargs)
  File "/home/joshpuglielli/anaconda3/lib/python3.9/site-packages/django/views/decorators/csrf.py", line 55, in wrapped_view
    return view_func(*args, **kwargs)
  File "/home/joshpuglielli/anaconda3/lib/python3.9/site-packages/django/views/generic/base.py", line 103, in view
    return self.dispatch(request, *args, **kwargs)
  File "/home/joshpuglielli/anaconda3/lib/python3.9/site-packages/rest_framework/views.py", line 509, in dispatch
    response = self.handle_exception(exc)
  File "/home/joshpuglielli/anaconda3/lib/python3.9/site-packages/rest_framework/views.py", line 469, in handle_exception
    self.raise_uncaught_exception(exc)
  File "/home/joshpuglielli/anaconda3/lib/python3.9/site-packages/rest_framework/views.py", line 480, in raise_uncaught_exception
    raise exc
  File "/home/joshpuglielli/anaconda3/lib/python3.9/site-packages/rest_framework/views.py", line 506, in dispatch
    response = handler(request, *args, **kwargs)
  File "/home/joshpuglielli/Desktop/social-comparison/social-comparison-review/backend/app/views.py", line 18, in post
    distortions = generate_distortions(curr_situation, curr_thought)
  File "/home/joshpuglielli/Desktop/social-comparison/social-comparison-review/backend/app/utils.py", line 45, in generate_distortions
    try:
  File "/home/joshpuglielli/anaconda3/lib/python3.9/ast.py", line 62, in literal_eval
    node_or_string = parse(node_or_string, mode='eval')
  File "/home/joshpuglielli/anaconda3/lib/python3.9/ast.py", line 50, in parse
    return compile(source, filename, mode, flags,
  File "<unknown>", line 1
    I'm sorry, the situation provided is not clear. Can you please describe the situation in more detail?
                                                                                                        ^
SyntaxError: EOL while scanning string literal
Internal Server Error: /distortions/
Traceback (most recent call last):
  File "/home/joshpuglielli/anaconda3/lib/python3.9/site-packages/django/core/handlers/exception.py", line 56, in inner
    response = get_response(request)
  File "/home/joshpuglielli/anaconda3/lib/python3.9/site-packages/django/core/handlers/base.py", line 197, in _get_response
    response = wrapped_callback(request, *callback_args, **callback_kwargs)
  File "/home/joshpuglielli/anaconda3/lib/python3.9/site-packages/django/views/decorators/csrf.py", line 55, in wrapped_view
    return view_func(*args, **kwargs)
  File "/home/joshpuglielli/anaconda3/lib/python3.9/site-packages/django/views/generic/base.py", line 103, in view
    return self.dispatch(request, *args, **kwargs)
  File "/home/joshpuglielli/anaconda3/lib/python3.9/site-packages/rest_framework/views.py", line 509, in dispatch
    response = self.handle_exception(exc)
  File "/home/joshpuglielli/anaconda3/lib/python3.9/site-packages/rest_framework/views.py", line 469, in handle_exception
    self.raise_uncaught_exception(exc)
  File "/home/joshpuglielli/anaconda3/lib/python3.9/site-packages/rest_framework/views.py", line 480, in raise_uncaught_exception
    raise exc
  File "/home/joshpuglielli/anaconda3/lib/python3.9/site-packages/rest_framework/views.py", line 506, in dispatch
    response = handler(request, *args, **kwargs)
  File "/home/joshpuglielli/Desktop/social-comparison/social-comparison-review/backend/app/views.py", line 18, in post
    distortions = generate_distortions(curr_situation, curr_thought)
  File "/home/joshpuglielli/Desktop/social-comparison/social-comparison-review/backend/app/utils.py", line 45, in generate_distortions
    try:
  File "/home/joshpuglielli/anaconda3/lib/python3.9/ast.py", line 62, in literal_eval
    node_or_string = parse(node_or_string, mode='eval')
  File "/home/joshpuglielli/anaconda3/lib/python3.9/ast.py", line 50, in parse
    return compile(source, filename, mode, flags,
  File "<unknown>", line 1
    I'm sorry, I couldn't identify a distortion as there isn't enough context to analyze the thought.
     ^
SyntaxError: invalid syntax
"POST /distortions/ HTTP/1.1" 500 113774
"POST /distortions/ HTTP/1.1" 500 113690
